# bedboss

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  MANIFEST.in  README.md  genome_config.yaml  mkdocs.yml  pyproject.toml  setup.py  update_usage_docs.sh
.github/: pull_request_template.md
.github/workflows/: black.yml  python-publish.yml  run-pytest.yml
bedboss/: __init__.py  __main__.py  _version.py  bedboss.py  bedboss2.py  bedboss_hpc.py  cli.py  cli_new.py  config_db_local.yaml  const.py  exceptions.py  installRdeps.R  models.py  requirements_test.sh  sample_yaml_creator.py  skipper.py  uploader.py  utils.py
bedboss/bbuploader/: __init__.py  cli.py  constants.py  main.py  metadata_extractor.py  models.py  utils.py
bedboss/bedbuncher/: __init__.py  bedbuncher.py
bedboss/bedclassifier/: __init__.py  bedclassifier.py
bedboss/bedmaker/: __init__.py  bedmaker.py  bedqc.py  const.py  est_line.sh  models.py  utils.py
bedboss/bedqc/: __init__.py  bedqc.py  est_line.sh
docs/: README.md  bedbase_configuration.yaml  changelog.md  how_to_bedbase_config.md  how_to_create_database.md  how_to_install_r_dep.md  usage.md
docs_jupyter/: bedstat_tutorial.ipynb  tutorial_all.ipynb
environment/: production.env
pipeline_schemas/: bedboss_all_pep_schema.yaml  bedboss_looper.yaml  bedboss_pipeline_interface.yaml  config_db_local.yaml  pipeline_interface.yaml
production/: config.yaml  production.env
requirements/: requirements-all.txt  requirements-dev.txt  requirements-docs.txt
schemas/: bedboss_output_schema.yaml
scripts/: update_assay.py  update_cell_line.py  update_genome_alias.sql  update_usage_docs.sh
test/: README.md  bash_requirements_test.sh  bedQC-pipeline_cleanup.sh  bedQC-pipeline_commands.sh  bedQC-pipeline_log.md  bedQC-pipeline_profile.tsv  bedbase_config_test.yaml  conftest.py  old_test_bedboss.py  stats.tsv  test_bbuploader.py  test_bedboss.py  test_bedclassifier.py  test_bedset.py  test_genomicdist.py  test_prep.py  test_ref_validator.py  test_standardizer.py
(+120 files in other folders)
